# umep-core

./: .gitignore  README.md  pyproject.toml  solweig_gbg_test.py  symbology-style.db
tests/data/: athens_2050.epw  bldgs_clip.gpkg  pois.gpkg  trees_clip.gpkg
tests/data/Goteborg_SWEREF99_1200/: CDSM_KRbig.tif  GBG_TMY_1977.txt  poi_gbg.dbf  poi_gbg.shp  poi_gbg.shx
tests/data/athens/: tree_canopies_clip.gpkg
tests/demos/: athens-demo.py  solweig_gbg_test.py
umep/: _version.py  common.py  configsolweig.ini  skyviewfactor_algorithm.py  solweig_algorithm.py
umep/functions/SOLWEIGpython/: Solweig_run.py
