[project]
name = "2024-athens-therm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "llvmlite>=0.40.0",
    "numba>=0.60.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "momepy>=0.8.1",
    "numpy<2.1.0",
    "pandas>=2.2.3",
    "pip>=24.2",
    "pvlib>=0.11.1",
    "pyepw>=0.1",
    "pytz>=2024.2",
    "rasterio>=1.4.1",
    "scipy>=1.14.1",
    "shapely>=2.0.6",
    "tqdm>=4.66.5",
    "pythermalcomfort>=2.10.0",
    "pyproj>=3.7.0",
]
